# duckiebot

./: README.md
apriltag_ros/launch/: tag_16h5_all.launch.py
lane_controller/: CMakeLists.txt  package.xml
lane_controller/launch/: all.launch.py  controllers.launch.py  gym_detectors.launch.py
lane_controller/src/: control_algorithms.cpp  control_algorithms.hpp  lanecontrol.cpp  lanes_processor.cpp  lanes_processor.hpp
lane_controller_msgs/: CMakeLists.txt  package.xml
lane_controller_msgs/msg/: LaneController.msg  LineDetected.msg
line_detect_center/: CMakeLists.txt  package.xml
line_detect_center/src/: filt_rect_detector.cpp  filt_rect_detector.hpp  line_process.cpp  line_process.hpp  linedetect.cpp
line_detect_right/: CMakeLists.txt  package.xml
line_detect_right/src/: linedetect.cpp
remote_control/: CMakeLists.txt  package.xml
remote_control/src/: publisher.cpp
statemachine/: CMakeLists.txt  package.xml
statemachine/src/: sign_detector.cpp  sign_detector.hpp  statemachine.cpp
